--- a/package.json
+++ b/package.json
@@ -4,14 +4,5 @@
   "description": "",
   "main": "index.js",
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.2.0",
-    "@typescript-eslint/parser": "^4.2.0",
-    "eslint": "^7.9.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jest": "^24.0.2",
-    "eslint-plugin-lit": "^1.2.2"
-  }
+  "license": "ISC"
 }
