Adding action test

--- a/core/.eslintrc.json
+++ b/core/.eslintrc.json
@@ -23,6 +23,8 @@
     "import/no-extraneous-dependencies": 0,
     "class-methods-use-this": 0,
     "no-underscore-dangle": 0,
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "jest/no-mocks-import": 0,
+    "import/prefer-default-export": 0
   }
 }
