--- a/core/package.json
+++ b/core/package.json
@@ -14,15 +14,21 @@
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.14",
+    "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jest": "^24.0.2",
-    "jest": "^26.4.2"
+    "fetch-mock": "^9.10.7",
+    "jest": "^26.4.2",
+    "node-fetch": "^2.6.1",
+    "redux-mock-store": "^1.5.4"
   },
   "dependencies": {
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
   }
 }
