--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,66 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "webpack-dev-server --config webpack.dev.js",
+    "start-dev-sw": "webpack-dev-server --config webpack.dev.sw.js",
+    "build-local": "webpack --config webpack.prod.analyzer.js",
+    "build": "npm run test && webpack --config webpack.prod.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "@jest/globals": "^26.4.2",
+    "@open-wc/testing": "^2.5.26",
+    "@open-wc/testing-helpers": "^1.8.9",
+    "@types/html-webpack-plugin": "^3.2.3",
+    "@types/jest": "^26.0.14",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
+    "babel-plugin-transform-builtin-classes": "^0.6.1",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "css-loader": "^4.2.0",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-lit": "^1.2.2",
+    "extract-loader": "^5.1.0",
+    "html-webpack-injector": "^1.1.4",
+    "html-webpack-plugin": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-webpack-plugin": "^2.4.2",
+    "jest": "^26.2.2",
+    "jest-config": "^26.4.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jest-matcher-utils": "^26.4.2",
+    "jest-puppeteer": "^4.4.0",
+    "lit-scss-loader": "^1.0.0",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.14.1",
+    "puppeteer": "^5.3.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
+    "ts-loader": "^8.0.3",
+    "typescript": "^4.0.2",
+    "webpack": "^4.44.1",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.0.9",
+    "workbox-webpack-plugin": "^5.1.3"
+  },
+  "dependencies": {
+    "@webcomponents/webcomponentsjs": "^2.4.4",
+    "lit-element": "^2.4.0",
+    "lit-html": "^1.3.0",
+    "regenerator-runtime": "^0.13.7"
+  }
 }
