--- a/web/package.json
+++ b/web/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.4.4",
     "lit-element": "^2.4.0",
+    "lit-element-router": "^2.0.3",
     "lit-html": "^1.3.0",
     "pwa-helpers": "^0.9.1",
     "regenerator-runtime": "^0.13.7"
