--- a/web/package.json
+++ b/web/package.json
@@ -66,6 +66,7 @@
     "lit-element-router": "^2.0.3",
     "lit-html": "^1.3.0",
     "pwa-helpers": "^0.9.1",
-    "regenerator-runtime": "^0.13.7"
+    "regenerator-runtime": "^0.13.7",
+    "tweet-client-core": "file:../core"
   }
 }
