--- a/core/package.json
+++ b/core/package.json
@@ -28,6 +28,7 @@
     "redux-mock-store": "^1.5.4"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
   }
