--- a/core/package.json
+++ b/core/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.0",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.0.3"
   }
