--- a/core/.eslintrc.json
+++ b/core/.eslintrc.json
@@ -28,6 +28,9 @@
     "no-underscore-dangle": 0,
     "linebreak-style": 0,
     "jest/no-mocks-import": 0,
-    "import/prefer-default-export": 0
+    "import/prefer-default-export": 0,
+    "@typescript-eslint/explicit-module-boundary-types": 0,
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/ban-ts-comment": 0
   }
 }
