--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "start-dev": "webpack-dev-server --config webpack.dev.js",
     "start-dev-sw": "webpack-dev-server --config webpack.dev.sw.js",
     "build-local": "webpack --config webpack.prod.analyzer.js",
-    "build": "npm run test && webpack --config webpack.prod.js",
+    "build": "webpack --config webpack.prod.js",
     "test": "jest"
   },
   "keywords": [],
